<resources>
    <string name="app_name">Learn Spanish with Emojis</string>
    <string name="category_phrases">Phrases</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Colors</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_family">Family Members</string>

    <string name="category_animals">Animals</string>

    <string name="category_sports">Sports</string>

    <string name="category_foods">Foods</string>

    <string name="category_days">Week Days and Months</string>
</resources>
